--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <title>Hexlet Frontend Project</title>
+        <title>RSS-agregator</title>
     </head>
     <body class="d-flex flex-column min-vh-100">
         <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
@@ -41,7 +41,7 @@
                                 </div>
                             </div>
                         </form>
-                        <p class="mt-2 mb-0 ">Пример: https://lorem-rss.hexlet.app/feed</p>
+                        <p class="mt-2 mb-0">Пример: https://lorem-rss.hexlet.app/feed</p>
                         <p class="feedback m-0 position-absolute small text-danger"></p>
                     </div>
                 </div>
