--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <footer class="footer border-top py-3 mt-5 bg-light">
         <div class="container-xl">
             <div class="text-center">
-                created by me</a>
+                created for my third project</a>
             </div>
         </div>
     </footer>
