--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>RSS-agregator</title>
 </head>
 
@@ -47,7 +45,7 @@
                             </div>
                         </div>
                     </form>
-                    <p class="mt-2 mb-0">Пример: https://lorem-rss.hexlet.app/feed</p>
+                    <p class="mt-2 mb-0 text-secondary">Пример: https://lorem-rss.hexlet.app/feed</p>
                     <p class="feedback m-0 position-absolute small text-danger"></p>
                 </div>
             </div>
